--- a/index/src/main/resources/application.properties
+++ b/index/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 server.port=8088
 
+aws.accessKey=AKIAV6SVNNC47OUBUCEG
+aws.secretKey=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
+
 supabase.api.key=
 supabase.api.secret=
 supabase.api.url=
